Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.4, 11.8, 12.2(EOL)
-
Not for Release Notes
Description
The data member dict_table_t::fk_max_recusive_level (sic, misspelled) is always zero ever since Bug #16244691 SERVER GONE AWAY ERROR OCCURS DEPENDING ON THE NUMBER OF TABLE/KEY RELATIONS was fixed in MySQL 5.7.2.
We had better remove this always-zero field, to save some memory.
Attachments
Issue Links
- blocks
-
MDEV-38607 Merge applicable changes from InnoDB 8.4.8
-
- Closed
-