MDEV-38618 Unused variable dict_table_t::fk_max_recusive_level

Ever since mysql/mysql-server@377774689bf6a16af74182753fe950d514c2c6dd
was applied in commit 2e814d4702d71a04388386a9f591d14a35980bfed
the data member dict_table_t::fk_max_recusive_level is never being
read, only initialized as 0. Let us follow the lead of
mysql/mysql-server@b22ac19f104c3b3654601b387c37ee82af180d7a
and remove this useless field.